templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: biografy
  name: biografy
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: biografy
  type: ClusterIP
